changes for git

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           size="50px">
       </p>
 
-      <p>Phone Number: <input type="number" name="phone" id="phone" placeholder="0300-1234567">
+      <p>Phone Number: <input type="tel" name="phone" id="phone" placeholder="0300-1234567">
       </p>
 
       <p>Address: </p>
